TAB-7730: Java 11
svn path=/dso/branches/java11-cwj/; revision=27878